--- a/APP/src/index.html
+++ b/APP/src/index.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body class="ml-2 mr-2 bg-dark">
-  <app-root></app-root>
+
+  <div class="container-fluid vh-100">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
